--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,9 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-jss": "^10.1.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.8.2"
@@ -39,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {},
+  "devDependencies": {
+    "jest-fetch-mock": "^3.0.3"
   }
 }
